# accel_pen

./: .env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  accel_pen.toml  build.rs  database.docker-compose.yml  dev.accel_pen.toml  dev.docker-compose.yml  diesel.toml  docker-compose.yml  prepare.docker-compose.yml
.cargo/: config.toml
.sqlx/: query-04f02bb2a853b310b60fb88de829ea464f09ee7e7888a4dbb7c16fb19e8187bc.json  query-0d1b7c2e513a21f61eb2017a4489bf10ada4f1b1ca4aedc9fc3d56ac2257e65d.json  query-0e2a5e034c81194b22a6e54b2ffb1e721f23de48065308658461e10663fa12cb.json  query-140fce24709d56195c145294973f2bdf3417ea85eef07237278849700658b825.json  query-15a8ecb8a6f5e24db45bfc616745e1c7d079c34ea4c4cf3a49702e6b19ec5c6f.json  query-17c293c5cfb367c861baae6021ebabdc988e1b0787f55980225969c76c033272.json  query-18315394876e4e090c6ad01bb37a224afb4d052b40d518f9300f461ac72f654a.json  query-1bd28101f9e0607f5b7b761795f4b9dedd60902d6f21001c99b2d72c5a68c0a6.json  query-1bf7bb91100258467b7137aab80cdd21f67ae55b7c0cb393918a07dd4d047f81.json  query-1cd9fd0b94e7e600d914c3cc05484b299413dfde82c656b86cc3a4c860aa0cd8.json  query-20ddefe44dc8f151e30fdc54bbfdbd24c8a9193dff8d650afc0d8910d9fac2eb.json  query-233ed8a0d294ec52661f664d36d506d5285212f68faef92120b2de112df626a2.json  query-26c58eb8746cea9ab72418d23846970ab158d03a3f5d64af1e862655fce0f425.json  query-2d506d1f3174782bf843ca399b35fcc72f6faf59e3dbd899aa8125fb40d831f3.json  query-2d6b1b87c10d634cfc06ee27c44aa18f1274e7c8e9a23d3381932a80af5657d5.json  query-31d2d330d7b4973f19cd57196942b7d788096710f05e50dbfbfdd952c95b9210.json  query-32c838289e630e4785411d4b734c58db3ecee15d6f296a1687de7137301693f3.json  query-34af187d58d9b98d72c3b8a2e09cf8b2a6a5c7b0ead6fb6a02eac2be17439cd5.json  query-38a0abe5d43041698d5f64a95a3dab36ebe77faf73fdd120d6ac490a7a5fe7df.json  query-3eb3681f950285cc69b7ba7e48dac5c4b8394ef93a7d2284b0b369e4f882b2a7.json  query-435ab44e08b82481fdd1513d75034767b8b2c5ed061b17fde860252d30b29d8c.json  query-4b764135274aae0d99b028e75b116bb96b231b6d020a8021e608ec4ee4824487.json  query-4badb2aa1fb61b414320433146b25e0d9399c7e27d6c7110960a3d282e2b0fbb.json  query-4f1fd98284faf64d8f23fde7bf35d7e3b97ce688f73e6508ae10730535207f56.json  query-53a2c8376c09ffb09f9cdac71fdd7a3d1eed7323fe0a96cbefcbdf1908549388.json  query-55ff0be145cab2bf8a8e92c08fba2975657d6922ec1d091cd8958a1b939175bf.json  query-56e9802f5f0d365a378f248313ecb3b487da1a74898a07f997e02f520b9df3e9.json  query-58a50090b123d5e85e16d011e443b32ffd76d7921884dc48d85304b9ec6f08c3.json  query-68b163632b64323b2706a9ef8ba10d4a3c24713ef6dd9d14a5459a8cc4632c4e.json  query-6a352b1f89f435b0349ebe80dd439ce1f1d5b8a7976ed8e05f282c6dbebc0f30.json  query-6a6b70107fc3df341f135c989b38fa3771994124a126d86e09b7d8fce307a1ae.json  query-6df73701e1d6255a5e477a26726201f81a02faf4d0ae154d4371014531801dd2.json  query-6f837097598aff0f56a39c84e23f6504fed1b97dd7ecf5a56b4492566d9458f2.json  query-700bcae6e686e422f9cfb1818d2caa0ceebbbaebdb663ffd1893a64e0643a3d1.json  query-7c7648fedf8ad7a773b270fdedf16956bf29d80d3dd96fc5a7eafa802c486407.json  (+42 more)
backend/: Cargo.toml  accel_pen.toml  build.rs  database.Dockerfile  dev.accel_pen.toml  schema.sql
backend/.sqlx/: query-02bbd6df72567e8bafce6da2f43398e5d8837f283f6cdad51414b722ce01569d.json  query-04262cada84d9e3daff6f157fb862ad3c704d0ea507d9b3afc6b2921a6a20176.json  query-0cb8b9cb252edb68022f336c52e3588d5d1d155833bb92927e299a3f6c44ffd8.json  query-49b2f06a86a09ab6a2c2cce7474447680b9990a3e6303486016ebf6f1dad556a.json  query-4a497ba62095107e106936cbbbe35caa0b520ec4fe185f496198a135bae7ec59.json  query-4f98f673755bb7d8ad509db3e54518335cf5d4a49cdccf5fa31b723d3d6181b4.json  query-57acc7f307f3327409071e43797108bda603611c3b315e2d3ba993fc21d08d3c.json  query-69e8563db09aa83ce45be8a7109f314ac9c4e87ed6ba147d641d7263169ae71e.json  query-7ac60cb28d951f7069c454bd7e5b780a32dd31ee69222a15b49f2f42dd097631.json  query-9c736f425d8fbf00d39827382ef3c8ec89e7da04b8a8c55af8e808435e6dd7eb.json  query-9d9a57fcf36ffe287c104f91ebd6bf639175a32a29eb21d09aea7a216ad2dd56.json  query-c8e01b4d8e4d804dcbcacd5cf3e942f177170d7d98015c5c30b58a4dfb3872bc.json  query-d6883b8310753cc2acda86f9e10bdbd7511efd4e95e24cf89edfceeb015b937f.json  query-d948f87070868446530f83785bba03e23e63443888dfa7a7197af2ad5490535b.json  query-dabc0e81c69da8231998f973a2ec3497550609e44304a8c7514032bd3edd2461.json  query-dc74cbe988ebe8d5c816eb267680350277d5ba51903bea3ccf8df45b298c27f2.json  query-e567a78fd96f2fe43031c099f69728da57fc0f5169ee694355eb2fb7d239ea32.json  query-ee1d55b887210dc97e6100a966e37cba0b37fc4e3183bdada33feb770973c481.json  query-f27cb00814d1096a24933206827ddd921b5f5fbe198a35ad04f3c92dfc587070.json  query-f8b5caf36dc148987a23ea9b433a2c17039894802b1686f2af88d7496ca17c2f.json  query-fac1396985f363bc8eb21a5b51080dd25db803fe7d4bf083de51d32348b7748e.json  query-fd1408f923590e25eb03d73772d12fe34a16ba0e62aadb1feacb28610e064faa.json
backend/bindings/: AllMapsByRequest.ts  AllMapsByResponse.ts  ApiErrorInner.ts  AuthorResponse.ts  FavoriteMapResponse.ts  MapDataRequest.ts  MapDataResponse.ts  MapUploadMeta.ts  MapUploadResponse.ts  OauthResponse.ts  SelfResponse.ts  TsApiError.ts  UserOrAuthor.ts  UserResponse.ts  index.ts
backend/gbx_rs/: Cargo.toml
backend/gbx_rs/examples/: Lungus 3 - Arctic Lungus.Map.Gbx  dir.rs  test.rs
backend/gbx_rs/fuzz/: Cargo.toml
backend/gbx_rs/src/: cursor.rs  lib.rs  parse.rs
backend/migrations_test/: 0001_test_data.down.sql  0001_test_data.up.sql  0002_alter_table.down.sql  0002_alter_table.up.sql
backend/src/: api.rs  auth.rs  config.rs  error.rs  main.rs  nadeo.rs  session.rs  ubi.rs
backend/src/auth/: nadeo.rs  ubi.rs
backend/src/nadeo/: api.rs  auth.rs
backend/static/: index.css  mapview.css  nandoString.css  nandoString.js
backend/templates/: layout.html.tera
backend/templates/map/: upload.html.tera
bindings/: ApiErrorInner.ts  MapDataResponse.ts  UserResponse.ts
gbx_rs/: Cargo.toml  README.md
gbx_rs/examples/: Quest for the Third Lungus.Map.Gbx  dir.rs  test.rs  thing.rs
gbx_rs/fuzz/fuzz_targets/: fuzz_target_1.rs
gbx_rs/src/: cursor.rs  lib.rs  parse.rs
(+133 files in other folders)
