[package]
name = "gbx_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lzokay-native = { path = "../lzokay-native-rs" }

byteorder = "1.5.0"
bytes = "1.10.1"
derivative = "2.2.0"
thiserror = "2.0.12"
tracing = "0.1.41"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter"] }
random = "0.9.1"
image = { version = "0.25.5", features = ["serde"] }
